networkpolicies/netpolipblock.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: frontend
  policyTypes:
  - Ingress
  ingress:
  - from:
    - ipBlock:
        cidr: 10.244.0.0/16
        except:
        - 10.244.189.81/32
    - ipBlock:
        cidr: 10.244.1.0/24
    - ipBlock:
        cidr: 10.244.2.0/24
    - namespaceSelector:
        matchLabels:
          name: default
